header responsive done

--- a/index.html
+++ b/index.html
@@ -7,11 +7,17 @@
     <title>Document</title>
 
 </head>
-<body class="inter-font">
+<body class="inter-font mar-20">
 <header class="bg-1">
     <div class="container-1"> 
         <nav class="navbar flex">
             <h3 class="fitness clr-1">Fitness</h3>
+            <div class="hamburger">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
             <ul class="nav-link flex">
                 <li class="nav-item"><a href="" class="nav-link home">Home</a></li>
                 <li class="nav-item"><a href="" class="nav-link clr-2">Service</a></li>
@@ -26,25 +32,26 @@
                 <h2 class="clr-2">Get body in <br> <span class="miama">shape</span> & stay <br>healthy</h2>
             </div>
             <div class="header-description clr-3">
-                <p>A huge selection of health and fitness content, healthy recipes <br> and transformation stories to help you get fit and stay fit!</p>
-            </div>
+                <p>A huge selection of health and fitness content, healthy recipes <br class="br-1"> and transformation stories to help you get fit and stay fit!</p>
+            </div>   
             <div class="btn-holder-1">
-                <button class="btn-1">Join Club Now!</button>
+                <button class="btn-1">Join <span id="club">club</span> Now!</button>
                 <button class="btn-2">Download App</button>
             </div>
         </div>
-        <div>
+        <div class="pic-1">
             <img src="images/Images 2.png" alt="Trainer stand with dumble">
+        <div class="btn-holder-2">
             <button id="btn-3">
-                <span id="btn-3-0">500+</span>
-                <br>
-                <span class="btn-3-4-com">Free Workout Videos</span>
-            </button>
-            <button id="btn-4">
-                <span id="btn-4-0">350+</span>
+                <span id="btn-3-0">350+</span>
                 <br>
                 <span class="btn-3-4-com">Video tutorial</span>
             </button>
+            <button id="btn-4">
+                <span id="btn-4-0">500+</span>
+                <br>
+                <span class="btn-3-4-com">Free Workout Videos</span>
+            </button> 
         </div>
     </div> 
 </header>
