solve some responsive problem but still issu with hori

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 </head>
 <body class="inter-font mar-20">
-<header class="bg-1">
+<header class="header bg-1">
     <div class="container-1"> 
         <nav class="navbar flex">
             <h3 class="fitness clr-1">Fitness</h3>
