change your habit section done without responsive

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="header-title">
                 <h2 class="clr-2">Get body in <br> <span class="miama">shape</span> & stay <br>healthy</h2>
             </div>
-            <div class="header-description clr-3">
+            <div class="description-com hed-des">
                 <p>A huge selection of health and fitness content, healthy recipes <br class="br-1"> and transformation stories to help you get fit and stay fit!</p>
             </div>   
             <div class="btn-holder-1">
@@ -56,7 +56,35 @@
     </div> 
 </header>
 <main>
-
+    <div class="container-3">
+        <div class="oh">
+            <h3 class="title-com">Change Your Habits</h3>
+            <p class="description-com">We believe fitness should be accessible to everyone, everywhere, regardless of income or
+            <br> access to a gym.</p>
+        </div>
+        <div class="pic-holder-h">
+            <div class="ha-p-s"> 
+                <img class="pic-h" src="images/image 3.png" alt="">
+                <p class="hab-t">Movement</p>
+                <p class="description-com">We believe fitness should be<br>accessible to everyone</p>
+            </div>
+            <div class="ha-p-s">
+                <img class="pic-h" src="images/image 2.png" alt="">
+                <p class="hab-t">Time</p>
+                <p class="description-com">We believe fitness should be<br>accessible to everyone</p>
+            </div>
+            <div class="ha-p-s">
+                <img class="pic-h" src="images/image 4.png" alt="">
+                <p class="hab-t">Practice</p>
+                <p class="description-com">We believe fitness should be<br>accessible to everyone</p>
+            </div>
+            <div class="ha-p-s">
+                <img  class="pic-h" src="images/image 5.png" alt="">
+                <p class="hab-t">Weight Loss</p>
+                <p class="description-com">We believe fitness should be<br>accessible to everyone</p>
+            </div>
+        </div>
+    </div>    
 </main>
 <footer>
 
