container 4 web version done

--- a/index.html
+++ b/index.html
@@ -84,7 +84,19 @@
                 <p class="description-com">We believe fitness should be<br>accessible to everyone</p>
             </div>
         </div>
-    </div>    
+    </div>
+    <div class="container-4">
+        <div class="cont-1">
+            <div class="con-4-0">
+                <h3 class="title-com">Run an Extra<br>Mile Easily</h3>
+                <p class="description-com con-4-d">We believe fitness should be accessible to everyone,<br> everywhere, regardless of income or access to a gym. With<br>hundreds of professional workouts.</p>
+                <button class="btn-5">Join Now</button>
+            </div>
+            <div>
+                <img class="run" src="images/Rectangle 22.png" alt="">
+            </div>
+        </div>
+    </div>
 </main>
 <footer>
 
