fixed some responsive problem

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <button class="btn-5">Join Now</button>
             </div>
             <div>
-                <img class="run" src="images/Rectangle 22.png" alt="">
+                <img class="run" src="images/Rectangle 22.png" alt="Boy Running">
             </div>
         </div>
     </div>
