--- a/index.html
+++ b/index.html
@@ -97,6 +97,77 @@
             </div>
         </div>
     </div>
+    <div class="container-5">
+        <div class="con-5-head">
+            <h3 class="title-com">BMI Calculator</h3>
+            <p class="description-com">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+        </div>
+    </div>
+    <div class="container-6">
+        <div class="chart">
+            <h5 class="title-com-6">BMI Calculator Chart</h5>
+            <table class="main-tab">
+               <tr class="tab-h">
+                <th>BMI</th>
+                <th>Weight Status</th>
+               </tr>
+               <tr class="tab-d">
+                <td>Below 18.5</td>
+                <td>Underweight</td>
+               </tr>
+               <tr class="tab-d">
+                <td>18.5 - 24.9</td>
+                <td>Healthy</td>
+               </tr>
+               <tr class="tab-d">
+                <td>25.0 - 29.9</td>
+                <td>Overweight</td>
+               </tr>
+               <tr class="tab-d">
+                <td>30.0 - and Above</td>
+                <td>Obese</td>
+               </tr>
+            </table>
+        </div>
+        <div class="calculator">
+           <div class="cal-h">
+            <h5 class="title-com-6">Calculate your BMI</h5>
+            <p class="description-com oh-7">We believe fitness should be accessible to everyone, everywhere, regardless of<br>income or access to a gym. </p>
+           </div>
+            <div class="calu-0">
+                <input class="calcu" type="text" name="Height/cm" placeholder="Height/cm">
+                <input class="calcu" type="text" name="Weight/kg" id="" placeholder="Weight/kg">
+                <input class="calcu" type="text" name="Age" placeholder="Age">
+                <select class="calcu" name="Sex" id="">
+                    <option class="calcu" value="" disabled selected hidden>Sex</option>
+                    <option class="calcu" value="Male">Male</option>
+                    <option class="calcu" value="Female">Female</option>
+                    <option class="calcu" value="Others">Others</option>
+                   </select>
+                   <select class="calcu oh-5" name="select an activity" id="">
+                    <option value="" disabled selected hidden>Select an activity factor</option>
+                    <option value="1">Football</option>
+                    <option value="2">Cricket</option>
+                    <option value="3">Running</option>
+                   </select>
+               </div>
+               <button class="btn-1 oh-6">Calculate</button>
+               <!-- <select class="calcu" name="Sex" id="">
+                <option class="calcu" value="" disabled selected hidden>Sex</option>
+                <option class="calcu" value="Male">Male</option>
+                <option class="calcu" value="Female">Female</option>
+                <option class="calcu" value="Others">Others</option>
+               </select>
+               <select class="calcu" name="select an activity" id="">
+                <option class="calcu" value="" disabled selected hidden>Select an activity factor</option>
+                <option value="1">Football</option>
+                <option value="2">Cricket</option>
+                <option value="3">Running</option>
+               </select>
+               <button class="btn-1">Calculate</button> -->
+           </div>
+        </div>
+    </div>
     <div  class="container-7">
         <div class="head-7">
             <h2 class="title-com">Meet Our Team</h2>
