con 6 responsive done

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <p class="description-com">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
         </div>
     </div>
-    <div class="container-6">
+    <div class="container-6 bg-6">
         <div class="chart">
             <h5 class="title-com-6">BMI Calculator Chart</h5>
             <table class="main-tab">
@@ -132,7 +132,7 @@
         <div class="calculator">
            <div class="cal-h">
             <h5 class="title-com-6">Calculate your BMI</h5>
-            <p class="description-com oh-7">We believe fitness should be accessible to everyone, everywhere, regardless of<br>income or access to a gym. </p>
+            <p class="description-com-6 oh-7">We believe fitness should be accessible to everyone, everywhere, regardless of<br>income or access to a gym. </p>
            </div>
             <div class="calu-0">
                 <input class="calcu" type="text" name="Height/cm" placeholder="Height/cm">
