--- a/index.html
+++ b/index.html
@@ -152,19 +152,6 @@
                    </select>
                </div>
                <button class="btn-1 oh-6">Calculate</button>
-               <!-- <select class="calcu" name="Sex" id="">
-                <option class="calcu" value="" disabled selected hidden>Sex</option>
-                <option class="calcu" value="Male">Male</option>
-                <option class="calcu" value="Female">Female</option>
-                <option class="calcu" value="Others">Others</option>
-               </select>
-               <select class="calcu" name="select an activity" id="">
-                <option class="calcu" value="" disabled selected hidden>Select an activity factor</option>
-                <option value="1">Football</option>
-                <option value="2">Cricket</option>
-                <option value="3">Running</option>
-               </select>
-               <button class="btn-1">Calculate</button> -->
            </div>
         </div>
     </div>
@@ -201,8 +188,32 @@
         </div>
     </div>
 </main>
-<footer>
-
+<footer class="bg-9">
+    <div class="foot"> 
+        <div class="1st-foot"> 
+            <h1 class="big-head">Fitness</h1> 
+            <p class="big-des">We believe fitness should be accessible to everyone,<br> everywhere, regardless of income or access to a gym. With <br>hundreds of professional workouts.</p> 
+        </div> 
+        <div class="2nd-foot"> 
+            <h3 class="cap">Get Started</h3> 
+            <p class="foot-links">Service</p> 
+            <p class="foot-links">Contact us</p> 
+            <p class="foot-links">Affiliate Programes</p> 
+            <p class="foot-links">About us</p> 
+        </div> 
+        <div class="3rd-foot"> 
+            <h3 class="cap">Get Started</h3> 
+            <p class="foot-links">Fitness</p> 
+            <p class="foot-links">Platform</p> 
+            <p class="foot-links">Workout library</p> 
+            <p class="foot-links">App design</p> 
+        </div> 
+    </div> 
+    <hr> 
+    <div class="rights"> 
+        <p class="right">All right reserved @Fitness 2024 
+        </p> 
+    </div> 
 </footer>
 </body>
 </html>
